# pygame-zer

./: .readthedocs.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml
docs/: conf.py  index.rst  modules.rst  pygame_zer.rst  requirements.txt
examples/: animated.py  barebones.py  camera_slider.py  flags.py  hover.py  imdraw.py  location_data.py  onclick.py  supersized.py  with_image.py  with_scaled_image.py  with_text.py
scripts/: test.sh
src/pygame_zer/: __init__.py  camera.py  camera.pyi  circle.py  circle.pyi  driver.py  driver.pyi  hitbox.py  hitbox.pyi  image.py  image.pyi  line.py  line.pyi  rect.py  rect.pyi  shape.py  shape.pyi  text.py  text.pyi  types.py  types.pyi
src/pyzer/: __init__.py  camera.py  circle.py  driver.py  image.py  line.py  rect.py  shape.py  text.py  types.py
tests/: common.py  test_basics.py  test_camera.py  test_circle.py  test_line.py  test_rect.py  test_text.py
