[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygame-zer"
version = "0.2.0"
authors = [
    { name = "Carlos Camacho", email = "carlosdcamachoed@gmail.com" },
]
description = "Zoomable explorable regions for pygame"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["pygame"]

[project.urls]
Homepage = "https://github.com/frqubit/pygame-zer"
Issues = "https://github.com/frqubit/pygame-zer/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
